packages/css/src/formElements/radiobutton/radiobutton.css
.md-radiobutton {
  font-family: 'Open sans';
  font-size: 1rem;
  border: none;
  padding: 0;
}

.md-radiobutton {
  display: flex;
  align-items: center;
  position: relative;
}

.md-radiobutton:focus-within {
  outline: 2px solid var(--mdPrimaryColor);
  outline-offset: 2px;
}

.md-radiobutton input[type='radio'] {
  position: absolute;
  left: 0;
  opacity: 0;
  cursor: pointer;
}

.md-radiobutton__label:hover {
  text-decoration: underline;
  cursor: pointer;
}

.md-radiobutton__check-area {
  width: 1.45rem;
  flex-shrink: 0;
  height: 1.45rem;
  display: block;
  background-color: #fff;
  border: 1px solid var(--mdPrimaryColor);
  border-radius: 50%;
  margin: 0 0.5rem 0 0;
  box-sizing: border-box;
  position: relative;
}

.md-radiobutton:not(.md-radiobutton--disabled):focus-within .md-radiobutton__check-area,
.md-radiobutton:not(.md-radiobutton--disabled):hover .md-radiobutton__check-area {
  background-color: var(--mdPrimaryColor20);
  text-decoration: underline;
}

.md-radiobutton__selected-dot {
  width: 0.6rem;
  height: 0.6rem;
  display: block;
  background-color: var(--mdPrimaryColor);
  border-radius: 50%;
  margin: 0 auto;
  position: absolute;
  left: 0;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  opacity: 0;
  animation: fadeIn 0.3s ease-out 1 forwards;
}

/* Disabled */
.md-radiobutton--disabled:hover {
  text-decoration: none;
  cursor: default;
}
.md-radiobutton--disabled .md-radiobutton__check-area {
  background-color: var(--mdGreyColor20);
  border-color: var(--mdGreyColor60);
}
.md-radiobutton--disabled .md-radiobutton__selected-dot {
  background-color: var(--mdGreyColor60);
}

